log
Wed 20 Mar 2024 08:17:40 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
979ff5e
Sat 23 Mar 2024 08:45:48 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
a1f7a26
Sat 23 Mar 2024 08:50:00 PM UTC: 
 exercises.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:127:29: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  127 |         if(*elemento == '{' && cadena[i] == '}' ||
      |            ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
exercises.c:129:28: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  129 |           *elemento == '[' && cadena[i] == ']')
      |           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fd77bfc
